# esp32_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: ArduinoJson.hpp  CMakeLists.txt  NetChannel.cpp  NetChannel.h  TcpClient.cpp  TcpClient.h  TcpServer.hpp  esp_init.cpp  esp_init.h  http_weather.cpp  http_weather.h  main.cpp  nvs.cpp  nvs.h  smartconfig.cpp  smartconfig.h  station_example_main.c  utils.cpp  utils.h  websocket.cpp  websocket.h  wifi_station.c  wifi_station.cpp  wifi_station.h
main/base/: copyable.hpp  defer.h  noncopyable.hpp
main/game/: game_engine_port_esp32_idf.cpp  game_engine_port_esp32_idf.h
main/modules/u8g2/: CMakeLists.txt
main/oled/: Adafruit_GFX.h  Adafruit_GFX_port.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  OLED.cpp  OLED.h  u8g2_esp32_hal.cpp  u8g2_esp32_hal.h
